--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@ node_modules/
 
 **/*.log
 
-.DS_Store
-Thumbs.db
-
 .firebaserc
 database.rules.json
 firebase.json
+firebaseConfigKeys.json
+
+.DS_Store
+Thumbs.db
